--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "express": "*",
     "body-parser": "*",
-    "cookie-parser": "*",
-    "multer": "*",
-    "ejs": "^1.0.0"
+    "cookie-parser": "^1.4.3",
+    "ejs": "^1.0.0",
+    "express": "*",
+    "multer": "*"
   }
 }
